--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,121 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-family: samarkan;
     src: url(assets/Samarkan.ttf) format("truetype");
   }
+
+  
+  
+  .body{
+      /* background-color: #5cdb95; */
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100%;
+  }
+  
+  .body1{
+      background-color: #1D2731;
+  }
+  
+  .body2{
+    /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100%; */
+    background-color: black;
+  }
+
+  @keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+  .txt{
+    color: #05386B;
+    margin-left: 4rem;
+  }
+  
+  .txt1{
+    color: #D9B310;
+    margin-left: 4rem;
+  }
+
+  .txt2{
+    color: white;
+    margin-left: 4rem;
+  }
+
+
+  .card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 2px rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 16rem;
+    height: 26rem;
+    margin: 2.4rem;
+    background: white;
+    color: #05386B;
+  }
+
+  .card1 {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 2px rgba(182, 173, 173, 0.2);
+    transition: 0.3s;
+    width: 16rem;
+    height: 26rem;
+    margin: 2.4rem;
+    background: white;
+    color: #1D2731;
+  }
+
+  .card2 {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0px 4px 8px 2px rgba(248, 248, 248, 0.2);
+    transition: 0.3s;
+    width: 16rem;
+    height: 26rem;
+    margin: 2.4rem;
+    background: white;
+    color: black;
+  }
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(14, 1, 1, 0.2);
+    transform: scale(1.05, 1.05);
+}
+
+/* On mouse-over, add a deeper shadow */
+.card1:hover {
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(182, 173, 173, 0.2);
+    transform: scale(1.05, 1.05);
+}
+
+/* On mouse-over, add a deeper shadow */
+.card2:hover {
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(248, 248, 248, 0.2);
+    transform: scale(1.05, 1.05);
+}
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+/* Responsive layout - makes a one column layout instead of a two-column layout */
+@media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
+  }
+}
+
