--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 2.4rem;
     background: white;
     color: #05386B;
+    white-space: normal;
+    word-break: break-all;
   }
 
   .card1 {
@@ -79,6 +81,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 2.4rem;
     background: white;
     color: #1D2731;
+    white-space: normal;
+    word-break: break-all;
   }
 
   .card2 {
@@ -90,6 +94,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 2.4rem;
     background: white;
     color: black;
+    white-space: normal;
+    word-break: break-all;
+    /* white-space: nowrap; */
+    /* text-overflow: ellipsis; */
   }
 
 /* On mouse-over, add a deeper shadow */
